# LinuxOSInterface

./: .clang-format  .gitmodules  CMakeLists.txt  LinuxOSShim.cpp  README.md
.github/workflows/: CI.yml
Source/: CMakeLists.txt  LinuxOSInterface.cpp  LinuxOSShim.cpp
Source/include/: LinuxOSInterface.h
Tests/: CMakeLists.txt  LinuxOSInterface_Test.cpp  LinuxOSShim_Test.cpp
include/: LinuxOSShim.h
